* 0.17.2

  - change the websocket proxy protocol a bit to make it possible to
    have multiple in flight rpcs.

  - Allow rpcs to complete out of order, and don't wait for them to
    move on
  
  - Fix trait requirements for Packing HashMap
  
  - implement a new toplevel Pack directive #[pack(unwrapped)]
    which prevents length wrapping the type it is applied to.

* 0.17.1

  - permissions now allow dynamic params. e.g.  { "/foo/bar/$[user]":
    { "$[user]": swlpd } } would give user 'eric' swlpd in
    /foo/bar/eric. { "/foo/bar/$[group]": { "$[group]-admin": swlpd,
    "$[group]": sl } } would give members of group 'users' sl in
    /foo/bar/users, and members of group 'users-admin' swlpd in
    /foo/bar/users.

  - add a new tool and library, netidx-wsproxy, a websocket proxy to
    publisher, subscriber and rpcs. Including an example javascript
    interface.

* 0.17.0
  
  - netidx_derive::Pack implement #[pack(other)] attribute for
    enums. Does the same thing as #[serde(other)], if the enum tag
    isn't know will decode as the enum #[pack(other)] is placed on.

  - fully propagate user and group info from the resolver through to
    the publisher. Now for all authentication mechanisms, the
    publisher will be able to return a UserInfo struct that contains
    the name, primary group, and groups of a connected user. This will
    only work if all components are running 0.17 or later, previous
    versions will work, but won't provide user info.

  - implement pack for three tuples, and four tuples.

  - update the browser to the latest version of gtk-rs, and make use
    of the finally upstreamed gktsourceview4 subclassing

* 0.16.0-9
  - Fix a bug in subscriber that could cause pushback not to work at
    very high message rates

  - implement better batching in channel recv. Pack channels are now
    capable of sending 1 GB/s of u64s locally on a 1260P, and the
    latency of sending 1000 u64s to and from a receiver on the same